<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="351dp"
        android:layout_height="96dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:fontFamily="monospace"
        android:text="@string/game_edukasi_batik_wonosobo"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <Button
        android:id="@+id/belajar"
        android:layout_width="225dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_green_dark"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="casual"
        android:text="@string/belajar"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <Button
        android:id="@+id/bermain"
        android:layout_width="225dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_dark"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="casual"
        android:text="@string/bermain"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

    <Button
        android:id="@+id/quit"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/ic_lock_power_off"
        android:clickable="true"
        android:onClick="exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />

    <Button
        android:id="@+id/help"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginStart="316dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/ic_menu_help"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setting"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginStart="276dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/ic_menu_preferences"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/help"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>